fix: contrast ratio with new bg color

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body, div, h1, h2, h3, p, pre {
 	color: #333;
 }
 html, body {
-	background: #bdcbe5;
+	background: #F4A100;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	line-height: 1.55;
@@ -532,7 +532,7 @@ table, th, td {
 	border-radius: 5px;
 	background: #fff;
 	box-shadow: 0 2px rgba(0,0,0,0.2);
-	color: #808080;
+	color: #242424;
 	opacity: 0.8;
 }
 .pcss3t-theme-1 > label:hover {
